# crm

./: .gitignore  db.sqlite3  main.py  pyproject.toml
apps/accounts/: admin.py  forms.py  models.py  signals.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/appointment/: models.py  urls.py  views.py
apps/appointment/migrations/: 0001_initial.py
apps/billings/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/billings/migrations/: 0001_initial.py  0002_billingpayable_pending_value_and_more.py
apps/chat/: models.py  services.py  urls.py  views.py
apps/chat/migrations/: 0001_initial.py
apps/clients/: admin.py  models.py  urls.py  views.py
apps/clients/migrations/: 0001_initial.py  0002_clienttag_client_tags.py  0003_clienttag_enterprise.py  0004_alter_client_tags.py
apps/dashboard/: urls.py  views.py
apps/department/: models.py  urls.py  views.py
apps/department/migrations/: 0001_initial.py
apps/employers/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
apps/enterprise/: admin.py  models.py
apps/landingpage/: urls.py  views.py
apps/plan/: models.py
apps/reports/: utils.py
apps/suppliers/: admin.py  models.py  urls.py  views.py
apps/tasks/: forms.py  models.py  urls.py  views.py
core/: settings.py  urls.py
pro_crm/: urls.py
static/css/: colors.css
templates/: base.html
templates/chat/: chat.html
templates/includes/: sidebar.html
templates/pages/: home.html
templates/reports/: billing_report.html  client_report.html  supplier_report.html
utils/: create_fictional_clients.py
(+42 files in other folders)
