[project]
name = "pro-crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
    "pillow>=11.2.1",
    "faker>=22.6.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.18",
    "openai>=1.82.0",
    "python-dotenv>=1.1.0",
]
